<resources>
    <string name="app_name" translatable="false">Cris</string>

    <string name="action_settings">Settings</string>
    <string name="main_str1">Blasphemy is a crime</string>
    <string name="main_play">Play</string>
    <string name="rb_best">Best Emmie</string>
    <string name="ply_1">Player 1</string>
    <string name="ply_2">Player 2</string>
    <string name="label_act2">Players\' name</string>
    <string name="btn_act2">Next</string>
    <string name="done">Done</string>
    <string name="turn">TURN</string>
    <string name="ply_done">Enter the name of the players</string>
    <string name="winner">The winner is: %s</string>
    <string name="no_win">There is not a winner!</string>
    <string name="reset">Play again</string>
    <string name="exit">Home</string>
    <string name="dio">God</string>
    <string name="mod">Select the game mode</string>
    <string name="btooth">Play with a friend through Bluetooth</string>
    <string name="no_btooth">Play with a friend on this device</string>
    <string name="support">This device not support Bluetooth</string>
    <string name="bt_enable">Bluetooth enabled</string>
    <string name="bt_notenabled">Bluetooth not enabled</string>
    <string name="vis">Your device will be visible for %d seconds</string>
    <string name="vis_not">Unable to start the search</string>
    <string name="discover">Discovering Bluetooth devices</string>
    <string name="discover_failed">Discovery failed to start</string>
    <string name="connection">Connection accepted</string>
    <string name="device">List of device</string>
    <string name="main_str2">Blasphemy prydently and mercy</string>
</resources>
