<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff713b">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25pt"
        android:layout_marginBottom="50pt">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ply_1"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal"
            android:textSize="25dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_gravity="center_horizontal"
            android:textSize="22dp"
            android:hint="Name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ply_2"
            android:id="@+id/textView4"
            android:layout_gravity="center_horizontal"
            android:textSize="25dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_gravity="center_horizontal"
            android:textSize="22dp"
            android:hint="Name" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_act2"
            android:textSize="20dp"
            android:layout_marginTop="25dp"
            android:background="#ff5232" />

    </LinearLayout>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rb_best"
        android:id="@+id/switch1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="68dp"
        android:checked="false" />
</RelativeLayout>